docs: complete API verification pass for 0.13.0 / Java 25+, update deployment JVM args, and fix recipes